--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /GIFMaker/GIFMaker/bin/Debug
+/GIFMaker/GIFMaker/obj/Debug
+/GIFMaker/.vs/GIFMaker/v14
